--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
 </head>
 
 <body>
+    <header>
+        <h1>Dmitrii's Library</h1>
+    </header>
+    <main>
+        <h2>My books</h2>
+        <div class="cards">
+            <div class="card">
+                <h3 class="title">The Hobbit</h3>
+                <ul class="description">
+                    <li>J.R.R. Tolkien</li>
+                    <li>295 pages</li>
+                    <li>Not read yet</li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h3 class="title">The Hobbit</h3>
+                <ul class="description">
+                    <li>J.R.R. Tolkien</li>
+                    <li>295 pages</li>
+                    <li>Not read yet</li>
+                </ul>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
+
     <script src="script.js"></script>
 </body>
 
