Make showBooks function

--- a/index.html
+++ b/index.html
@@ -15,25 +15,7 @@
     </header>
     <main>
         <h2>My books</h2>
-        <div class="cards">
-            <div class="card">
-                <h3 class="title">The Hobbit</h3>
-                <ul class="description">
-                    <li>J.R.R. Tolkien</li>
-                    <li>295 pages</li>
-                    <li>Not read yet</li>
-                </ul>
-            </div>
-
-            <div class="card">
-                <h3 class="title">The Hobbit</h3>
-                <ul class="description">
-                    <li>J.R.R. Tolkien</li>
-                    <li>295 pages</li>
-                    <li>Not read yet</li>
-                </ul>
-            </div>
-        </div>
+        <div class="cards"></div>
     </main>
     <footer></footer>
 
