Make adding new book

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label for="read">Have you read it?</label>
             <input type="checkbox" name="read" id="read">
         </div>
-        <button type="submit">Add book</button>
+        <button id="add-submit-btn" type="submit">Add book</button>
     </form>
 
     <div class="overlay"></div>
